--- a/assets/main.scss
+++ b/assets/main.scss
@@ -7,9 +7,22 @@
 // Use grey background for code
 pre, code, .highlighter-rouge .highlight { background-color: #f8f8f8; }
 
+// .site-title::before {
+// 	content: url("/assets/ai-wants-hpc_logo.png");
+// 	display: inline-block;
+// 	position: relative;
+// 	width: 5px;
+// 	// height: 1%
+// 	top: 20px;
+	// left: -150px
+// }
+
+ 
 .site-title::before {
-	content: url("/assets/want_logo2.png");
-	display: inline-block;
-	position: relative;
-	left: -10px
+    background-image: url("/assets/ai-wants-hpc_logo.png");
+    background-size: 760px 570px;
+    display: inline-block;
+    width: 760px; 
+    height: 570px;
+    content:"";
 }
