--- a/assets/main.scss
+++ b/assets/main.scss
@@ -6,12 +6,25 @@
 
 // Use grey background for code
 pre, code, .highlighter-rouge .highlight { background-color: #f8f8f8; }
- 
+
+
 .site-title::before {
     background-image: url("/assets/ai-wants-hpc_logo.png");
-    background-size: 760px 570px;
+    background-size: 240px 180px;
+	position: relative;
     display: inline-block;
-    width: 760px; 
-    height: 570px;
+    width: 240px; 
+    height: 180px;
+    content:"";
+    margin-right: -240px;
+    margin-bottom: -130px;
+    left: -280px;
+}
+
+.site-title::after {
+    background-size: 240px 0px;
+    display: inline-block;
+    width: 240px; 
+    height: 0px;
     content:"";
 }
